<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color_black_100"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/color_black_80"
        android:textSize="32sp"
        android:text="@string/normal_depth_0"/>

    <TextView
        android:id="@+id/textDepth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="150dp"
        android:textSize="20sp"
        android:text="@string/the_optical_depth_of_the_element_can_vary_from_1_to_1"/>

    <TextView
        android:id="@+id/view1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:background="@color/color_black_100"
        android:text="@string/_0_8"/>

    <TextView
        android:id="@+id/view2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:background="@color/color_black_90"
        android:text="@string/_0_6"/>

    <TextView
        android:id="@+id/view3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:background="@color/color_black_80"
        android:text="@string/_0_4"/>

    <TextView
        android:id="@+id/view4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:background="@color/color_black_70"
        android:text="@string/_0_2"/>

    <TextView
        android:id="@+id/view5"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:background="@color/color_black_60"
        android:text="@string/_0_0"/>

    <TextView
        android:id="@+id/view6"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:background="@color/color_black_50"
        android:text="@string/m_0_2"/>

    <TextView
        android:id="@+id/view7"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textSize="24sp"
        android:background="@color/color_black_40"
        android:text="@string/m_0_4"/>

    <TextView
        android:id="@+id/view8"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textSize="24sp"
        android:background="@color/color_black_30"
        android:text="@string/m_0_6"/>

    <TextView
        android:id="@+id/view9"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textSize="24sp"
        android:background="@color/color_black_20"
        android:text="@string/m_0_8"/>

    <TextView
        android:id="@+id/view10"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:textSize="24sp"
        android:background="@color/color_black_10"
        android:text="@string/m_1_0"/>











    <TextView
        android:id="@+id/view1_2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:background="@color/color_black_100"
        android:text="@string/_0_8"/>

    <TextView
        android:id="@+id/view2_2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:background="@color/color_black_90"
        android:text="@string/_0_6"/>

    <TextView
        android:id="@+id/view3_2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:background="@color/color_black_80"
        android:text="@string/_0_4"/>

    <TextView
        android:id="@+id/view4_2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:background="@color/color_black_70"
        android:text="@string/_0_2"/>

    <TextView
        android:id="@+id/view5_2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:background="@color/color_black_60"
        android:text="@string/_0_0"/>

    <TextView
        android:id="@+id/view6_2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="24sp"
        android:background="@color/color_black_50"
        android:text="@string/m_0_2"/>

    <TextView
        android:id="@+id/view7_2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:textSize="24sp"
        android:background="@color/color_black_40"
        android:text="@string/m_0_4"/>

    <TextView
        android:id="@+id/view8_2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:textSize="24sp"
        android:background="@color/color_black_30"
        android:text="@string/m_0_6"/>

    <TextView
        android:id="@+id/view9_2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:textSize="24sp"
        android:background="@color/color_black_20"
        android:text="@string/m_0_8"/>

    <TextView
        android:id="@+id/view10_2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="50dp"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:textSize="24sp"
        android:background="@color/color_black_10"
        android:text="@string/m_1_0"/>
</FrameLayout>